Define and implement HTTP endpoint to submit a guess
