# backend/src/drivingAdapters/express/server.ts
@@ -3,12 +3,16 @@ import type { paths } from './generated/api'
 import { ForPlacingGuesses } from '../../drivingPorts/ForPlacingGuesses'
 
 const expressServer = express()
+expressServer.use(express.json())
+
 const PORT = process.env.PORT || 3000
 
 type InfoResponse =
     paths['/info']['get']['responses']['200']['content']['application/json']
 type HealthResponse =
     paths['/health']['get']['responses']['200']['content']['application/json']
+type SubmitGuessRequestBody =
+    paths['/submit-guess']['post']['requestBody']['content']['application/json']
 
 export function startServer(forPlacingBets: ForPlacingGuesses) {
     expressServer.get(
@@ -41,6 +45,18 @@ export function startServer(forPlacingBets: ForPlacingGuesses) {
             })
         }
     )
+
+    expressServer.post('/submit-guess', async (req: Request, res: Response) => {
+        const playerId = req.header('Authorization')
+        if (!playerId) {
+            res.status(401).json(undefined)
+            return
+        }
+        const body = req.body as SubmitGuessRequestBody
+        console.log('body: ' + req.body)
+        await forPlacingBets.submitNewGuess(playerId, body.direction)
+        res.status(201).json(undefined)
+    })
 
     expressServer.listen(PORT, () => {
         console.log(`Server running at http://localhost:${PORT}`)
